# cicada

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  INSTALL.md  MCP_TOOLS_REFERENCE.md  Makefile  OBJECTIVE.md  README.md  config.yaml  config.yaml.example  debug_alias.py  install.py  install.sh  pyproject.toml  test_ab.py
.cicada/: index.json
agents/: indexing-features.md
cicada/: __init__.py  _version_hash.py  clean.py  commands.py  formatter.py  git_helper.py  index_mode.py  indexer.py  install.py  interactive_setup.py  interactive_setup_helpers.py  keyword_expander.py  keyword_extractor.py  keyword_search.py  lightweight_keyword_extractor.py  mcp_server.py  mcp_tools.py  parser.py  pr_finder.py  pr_indexer.py  scoring.py  setup.py  status.py  version_check.py  watcher.py
codebook/: INCREMENTAL_INDEXING.md  README.md
docs/: 08-INCREMENTAL_INDEXING.md  12-TOOL_DISCOVERABILITY_TASKS.md  17-WORKFLOW_EXAMPLES.md  19-PDR_CLI_REDESIGN_PR_INDEXING.md  23-TOKEN_OPTIMIZATION.md  DEV_BRANCH_SUMMARY.md  EXTENDED_GIT_HISTORY.md  PR_INDEXING.md  WEEKEND_MVP_PLAN.md
extensions/: MVP.md  PYPI.md  README.md
scripts/: check_dead_links.py  fix_task_links.py
tests/: conftest.py  setup_fixtures.sh  test_acceptance.py  test_call_sites.py  test_claude_md_update.py  test_e2e.py  test_editor_specs.py  test_formatter.py  test_git_extended_history.py  test_git_helper.py  test_github_api_client.py  test_gitignore_integration.py  test_index_utils.py  test_indexer_comprehensive.py  test_install_comprehensive.py  test_install_detection.py  (+35 more)
(+186 files in other folders)
