[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicada"
version = "0.1.0"
description = "An Elixir module search MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-elixir>=0.1.0",
]

[project.scripts]
cicada-server = "cicada.mcp_server:main"
cicada-setup = "install:main"
cicada-index = "cicada.indexer:main"

[tool.setuptools.packages.find]
include = ["cicada*"]
